tests/e2e/semantics/function_redeclaration.error
Error: syntax error in story at line 4, column 1

4|    function foo a:int
      ^^^^^^^^^^^^^^

E0111: Function `foo` has already been declared
