tests/e2e/semantics/function_redeclaration.story
function foo a:int
    x = 0

function foo a:int
    x = 0
